ml-projects/example-project-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-project-prod-service
spec:
  selector:
    app: example-project-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
